Fix some images overflowing info container

--- a/src/app/views/media-view/styles.scss
+++ b/src/app/views/media-view/styles.scss
@@ -11,9 +11,5 @@
 
             @media(max-width: 650px) { max-width: calc(100% - calc(var(--base-pm) * 4)); }
         }
-
-        @media(max-width: 670px) {
-            &Wrapper { width: 100%; }
-        }
     }
 }
